--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "John Smith",
+  "author": "Harshita Motawala",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
