--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "web322.app",
+  "name": "web322-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "blog-service.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,6 +10,11 @@
   "author": "Harshita Motawala",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "cloudinary": "^1.32.0",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "multer": "^1.4.5-lts.1",
+    "streamifier": "^0.1.1",
+    "strip-js": "^1.2.0"
   }
 }
